<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/Name"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="@string/password"
        android:text="@string/passsword"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:ems="10"
        android:hint="@string/retypePassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/cancel" />

</LinearLayout>